--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head></head><body>
-<div id="box" style="width:252px;font:25px/25px кнлЕ;background:#000;color:#9f9;border:#999 20px ridge;text-shadow:2px 3px 1px #0f0;"></div>
-<div  style="width:252px;font:25px/25px кнлЕ;background:#000;color:#9f9;border:#999 20px ridge;text-shadow:2px 3px 1px #0f0;">
+<div id="box" style="width:252px;font:25px/25px О©╫О©╫О©╫О©╫;background:#000;color:#9f9;border:#999 20px ridge;text-shadow:2px 3px 1px #0f0;"></div>
+<div  style="width:252px;font:25px/25px О©╫О©╫О©╫О©╫;background:#000;color:#9f9;border:#999 20px ridge;text-shadow:2px 3px 1px #0f0;">
 	<div>
-		<button style="margin-left: 100px;"  onclick="onUp()">ио</button>
+		<button style="margin-left: 100px;"  onclick="onUp()">Д╦┼</button>
 	</div>
 	<div>
 		<span  style="margin-left: 50px;margin-top: 10px;">
-			<button  onclick="onLeft()">вС</button>
+			<button  onclick="onLeft()">Е╥╕</button>
 		</span>
 		<span style="margin-left: 55px;margin-top: 10px;">
-			<button  onclick="onRight()">ср</button>
+			<button  onclick="onRight()">Е▐Ё</button>
 		</span>
 	</div>
 	<div>
-		<button  style="margin-left: 100px;margin-top: 10px;" onclick="onDown()">об</button>
+		<button  style="margin-left: 100px;margin-top: 10px;" onclick="onDown()">Д╦▀</button>
 	</div>
 </div>
 <script type="text/javascript"  src="main.js">
